--- a/index.html
+++ b/index.html
@@ -1,49 +1,117 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+    <title>Trunks!!</title>
 
-		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+    <link rel="stylesheet" href="css/reveal.css">
+    <link rel="stylesheet" href="css/theme/black.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+    <!-- Theme used for syntax highlighting of code -->
+    <link rel="stylesheet" href="lib/css/zenburn.css">
 
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
-	</head>
-	<body>
-		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
-		</div>
+    <!-- Printing and PDF exports -->
+    <script>
+      var link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.type = 'text/css';
+      link.href = window.location.search.match(/print-pdf/gi) ? 'css/print/pdf.css' : 'css/print/paper.css';
+      document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+</head>
+<body>
+<div class="reveal">
+    <div class="slides">
+        <section>
+            <section>
+                <h1>Welcome</h1>
+                <img data-gif src="https://media.giphy.com/media/eoVusT7Pi9ODe/giphy.gif"/>
+            </section>
+            <section>
+                <h1>Up?</h1>
+                <img data-gif src="https://media.giphy.com/media/AEpaVDTAop4TC/giphy.gif"/>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h2>Git</h2>
+            </section>
+            <section>
+                <h2>Git</h2>
+                <ul>
+                    <li>Source Control</li>
+                    <li>CI/CD</li>
+                    <li>Knowledge Sharing</li>
+                </ul>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h2>Git === Mess <small style='vertical-align: middle;'>(sometimes)</small></h2>
+                <img data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
+            </section>
+        </section>
+        <section>
+            <h2>What do we want?</h2>
+            <ul>
+                <li>
+                    Pinpoint Changes
+                </li>
+                <li>
+                    Easy to Contribute
+                </li>
+                <li>
+                    Easy Rollbacks
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Solutions</h2>
+            <ul>
+                <li>
+                    Commits by Features
+                </li>
+                <li>
+                    Commits with a Convention
+                </li>
+                <li>
+                    Squash
+                </li>
+                <li>
+                    Forks
+                </li>
+            </ul>
+        </section>
+        <section>
+            <h2>Trunk Based development</h2>
+            <a target="_blank" href="https://trunkbaseddevelopment.com/">
+                Nice Guide
+            </a>
+        </section>
+    </div>
+</div>
 
-		<script src="lib/js/head.min.js"></script>
-		<script src="js/reveal.js"></script>
+<script src="lib/js/head.min.js"></script>
+<script src="js/reveal.js"></script>
 
-		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
-			Reveal.initialize({
-				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
-				]
-			});
-		</script>
-	</body>
+<script>
+  // More info about config & dependencies:
+  // - https://github.com/hakimel/reveal.js#configuration
+  // - https://github.com/hakimel/reveal.js#dependencies
+  Reveal.initialize({
+    dependencies: [
+      { src: 'plugin/markdown/marked.js' },
+      { src: 'plugin/markdown/markdown.js' },
+      { src: 'plugin/notes/notes.js', async: true },
+      {
+        src: 'plugin/highlight/highlight.js', async: true, callback: function () {
+          hljs.initHighlightingOnLoad();
+        }
+      }
+    ]
+  });
+</script>
+</body>
 </html>
