--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
                 <h2>Git === Mess <small style='vertical-align: middle;'>(sometimes)</small></h2>
                 <img data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
             </section>
+            <section>
+                <h2>Git === Mess <small style='vertical-align: middle;'>(sometimes)</small></h2>
+                <img height="540px" src="lib/images/scary-log.png"/>
+            </section>
         </section>
         <section>
             <h2>What do we want?</h2>
