--- a/index.html
+++ b/index.html
@@ -58,6 +58,17 @@
             </section>
         </section>
         <section>
+            <section>
+                <h2>Commits</h2>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h2>Merge/Pull Requests</h2>
+                <img src="lib/images/nice-log.png"/>
+            </section>
+        </section>
+        <section>
             <h2>What do we want?</h2>
             <ul>
                 <li>
