--- a/index.html
+++ b/index.html
@@ -54,18 +54,38 @@
             </section>
             <section>
                 <h2>Git === Mess <small style='vertical-align: middle;'>(sometimes)</small></h2>
-                <img height="540px" src="lib/images/scary-log.png"/>
+                <img height="540px" src="lib/images/bad_git_log.png"/>
             </section>
         </section>
         <section>
             <section>
                 <h2>Commits</h2>
             </section>
+            <section>
+                <h2>Commits</h2>
+                <p>
+                    We do hundreds every day.
+                </p>
+                <p>
+                    Best Case - We write for ourselves.
+                </p>
+                <p>
+                    Worst Case - We pray that no one will read them.
+                </p>
+            </section>
+            <section>
+                <h2>Commits - Not readable</h2>
+                <img src="lib/images/bad_commit_log.png"/>
+            </section>
+            <section>
+                <h2>Commits - Readable :)</h2>
+                <img src="lib/images/nice_commit_log.png"/>
+            </section>
         </section>
         <section>
             <section>
                 <h2>Merge/Pull Requests</h2>
-                <img src="lib/images/nice-log.png"/>
+                <img src="lib/images/nice_git_log.png"/>
             </section>
         </section>
         <section>
