--- a/index.html
+++ b/index.html
@@ -49,11 +49,15 @@
         </section>
         <section>
             <section>
-                <h2>Git === Mess <small style='vertical-align: middle;'>(sometimes)</small></h2>
+                <h2>Git === Mess
+                    <small style='vertical-align: middle;'>(sometimes)</small>
+                </h2>
                 <img data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
             </section>
             <section>
-                <h2>Git === Mess <small style='vertical-align: middle;'>(sometimes)</small></h2>
+                <h2>Git === Mess
+                    <small style='vertical-align: middle;'>(sometimes)</small>
+                </h2>
                 <img height="540px" src="lib/images/bad_git_log.png"/>
             </section>
         </section>
@@ -64,18 +68,21 @@
             <section>
                 <h2>Commits</h2>
                 <p>
-                    We do hundreds every day.
-                </p>
-                <p>
-                    Best Case - We write for ourselves.
-                </p>
-                <p>
+                    We do hundreds every day.<br/>
+                    Best Case - We write for ourselves.<br/>
                     Worst Case - We pray that no one will read them.
                 </p>
             </section>
             <section>
                 <h2>Commits - Not readable</h2>
                 <img src="lib/images/bad_commit_log.png"/>
+            </section>
+            <section>
+                <h2>Commits - Let's solve</h2>
+                <p>
+                    Use a dedicated convention. <br/>
+                    For example Semantic Commits
+                </p>
             </section>
             <section>
                 <h2>Commits - Readable :)</h2>
@@ -86,6 +93,21 @@
             <section>
                 <h2>Merge/Pull Requests</h2>
                 <img src="lib/images/nice_git_log.png"/>
+            </section>
+        </section>
+        <section>
+            <section>
+                <h2>Releases</h2>
+                add image
+            </section>
+            <section>
+                <h2>Releases</h2>
+                <h4>Semantic Release</h4>
+                <ul>
+                    <li>Commits of type fix will trigger bugfix releases, think 0.0.1</li>
+                    <li>Commits of type feat will trigger feature releases, think 0.1.0</li>
+                    <li>Commits with BREAKING CHANGE in body or footer will trigger breaking releases, think 1.0.0</li>
+                </ul>
             </section>
         </section>
         <section>
