--- a/index.html
+++ b/index.html
@@ -85,6 +85,37 @@
                 </p>
             </section>
             <section>
+                <h2>Commits - Semantic</h2>
+                <p>
+                    Follow a
+                    <a target="_blank"
+                       href="https://github.com/angular/angular.js/blob/master/DEVELOPERS.md#-git-commit-guidelines">
+                        guideline
+                    </a>
+                    <br/>
+                    <small>
+                        <ul>
+                            <li><b>feat:</b> A new feature</li>
+                            <li><b>fix:</b> A bug fix</li>
+                            <li><b>docs:</b> Documentation only changes</li>
+                            <li><b>style:</b> Changes that do not affect the meaning of the code (white-space,
+                                formatting,
+                                missing
+                                semi-colons, etc)
+                            </li>
+                            <li><b>refactor:</b> A code change that neither fixes a bug nor adds a feature</li>
+                            <li><b>perf:</b> A code change that improves performance</li>
+                            <li><b>test:</b> Adding missing or correcting existing tests</li>
+                            <li><b>chore:</b> Changes to the build process or auxiliary tools and libraries such as
+                                documentation
+                                generation
+                            </li>
+
+                        </ul>
+                    </small>
+                </p>
+            </section>
+            <section>
                 <h2>Commits - Readable :)</h2>
                 <img src="lib/images/nice_commit_log.png"/>
             </section>
