--- a/index.html
+++ b/index.html
@@ -116,6 +116,14 @@
                 </p>
             </section>
             <section>
+                <h2>Commits - Semantic</h2>
+                <p>
+                    Use a <a target="_blank" href="https://github.com/commitizen/cz-cli">tool</a> <br/>
+                    /<br/>
+                    Memorize them
+                </p>
+            </section>
+            <section>
                 <h2>Commits - Readable :)</h2>
                 <img src="lib/images/nice_commit_log.png"/>
             </section>
