--- a/index.html
+++ b/index.html
@@ -136,8 +136,50 @@
         </section>
         <section>
             <section>
+                <h2>Branches</h2>
+            </section>
+            <section>
+                <h2>Branches</h2>
+                <ul>
+                    <li>
+                        Too many to know what's going on
+                    </li>
+                    <li>
+                        Usually only relevant to one person
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Branches</h2>
+                <h4>Solution</h4>
+                <p>
+                    Don't add branches to master repository
+                </p>
+            </section>
+            <section>
+                <h2>Branches</h2>
+                <h4>Solution</h4>
+                <p>
+                    Forks!!!<br/>
+                    <img data-gif src="https://media.giphy.com/media/5xtDarH5225prbkGJ20/giphy.gif">
+                </p>
+            </section>
+            <section>
+                <h2>Forks</h2>
+                <ul>
+                    <li>
+                        Upstream - Original Repo
+                    </li>
+                    <li>
+                        Downstream - Your "copy"
+                    </li>
+                </ul>
+            </section>
+        </section>
+        <section>
+            <section>
                 <h2>Releases</h2>
-                add image
+                <img src="https://media.giphy.com/media/NRWFU8lq7hCXS/giphy.gif" data-gif />
             </section>
             <section>
                 <h2>Releases</h2>
@@ -145,7 +187,8 @@
                 <ul>
                     <li>Commits of type fix will trigger bugfix releases, think 0.0.1</li>
                     <li>Commits of type feat will trigger feature releases, think 0.1.0</li>
-                    <li>Commits with BREAKING CHANGE in body or footer will trigger breaking releases, think 1.0.0</li>
+                    <li>Commits with BREAKING CHANGE in body or footer will trigger breaking releases, think 1.0.0
+                    </li>
                 </ul>
             </section>
         </section>
