--- a/index.html
+++ b/index.html
@@ -131,7 +131,25 @@
         <section>
             <section>
                 <h2>Merge/Pull Requests</h2>
-                <img src="lib/images/nice_git_log.png"/>
+                <img src="https://media.giphy.com/media/cFkiFMDg3iFoI/giphy.gif" data-gif/>
+            </section>
+            <section>
+                <h2>Merge/Pull Requests</h2>
+                <ul>
+                    <li>
+                        Contain many commits that you don't care about
+                    </li>
+                    <li>
+                        Contain too many commits...
+                    </li>
+                </ul>
+            </section>
+            <section>
+                <h2>Merge/Pull Requests</h2>
+                <p>
+                    Squash / Rebase<br/>
+                    <img src="lib/images/nice_git_log.png"/>
+                </p>
             </section>
         </section>
         <section>
@@ -179,7 +197,7 @@
         <section>
             <section>
                 <h2>Releases</h2>
-                <img src="https://media.giphy.com/media/NRWFU8lq7hCXS/giphy.gif" data-gif />
+                <img src="https://media.giphy.com/media/NRWFU8lq7hCXS/giphy.gif" data-gif/>
             </section>
             <section>
                 <h2>Releases</h2>
