--- a/index.html
+++ b/index.html
@@ -247,6 +247,14 @@
                 Nice Guide
             </a>
         </section>
+        <section>
+            <h1>
+                Thanks :)
+            </h1>
+            <p>
+                <img src="https://media.giphy.com/media/y8fXirTJjj6E0/giphy.gif" data-gif>
+            </p>
+        </section>
     </div>
 </div>
 
