--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <section>
             <section>
                 <h1>Welcome</h1>
-                <img data-gif src="https://media.giphy.com/media/eoVusT7Pi9ODe/giphy.gif"/>
+                <img alt="hello" data-gif src="https://media.giphy.com/media/eoVusT7Pi9ODe/giphy.gif"/>
             </section>
             <section>
                 <h1>Up?</h1>
-                <img data-gif src="https://media.giphy.com/media/AEpaVDTAop4TC/giphy.gif"/>
+                <img alt="stay awakr" data-gif src="https://media.giphy.com/media/AEpaVDTAop4TC/giphy.gif"/>
             </section>
         </section>
         <section>
@@ -52,13 +52,13 @@
                 <h2>Git === Mess
                     <small style='vertical-align: middle;'>(sometimes)</small>
                 </h2>
-                <img data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
+                <img alt="messy git" data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
             </section>
             <section>
                 <h2>Git === Mess
                     <small style='vertical-align: middle;'>(sometimes)</small>
                 </h2>
-                <img height="540px" src="lib/images/bad_git_log.png"/>
+                <img alt="bad git log" height="540" src="lib/images/bad_git_log.png"/>
             </section>
         </section>
         <section>
@@ -75,7 +75,7 @@
             </section>
             <section>
                 <h2>Commits - Not readable</h2>
-                <img src="lib/images/bad_commit_log.png"/>
+                <img alt="bad commit log" src="lib/images/bad_commit_log.png"/>
             </section>
             <section>
                 <h2>Commits - Let's solve</h2>
@@ -125,13 +125,13 @@
             </section>
             <section>
                 <h2>Commits - Readable :)</h2>
-                <img src="lib/images/nice_commit_log.png"/>
+                <img alt="nice commit log" src="lib/images/nice_commit_log.png"/>
             </section>
         </section>
         <section>
             <section>
                 <h2>Merge/Pull Requests</h2>
-                <img src="https://media.giphy.com/media/cFkiFMDg3iFoI/giphy.gif" data-gif/>
+                <img alt="mr image" src="https://media.giphy.com/media/cFkiFMDg3iFoI/giphy.gif" data-gif/>
             </section>
             <section>
                 <h2>Merge/Pull Requests</h2>
@@ -148,7 +148,7 @@
                 <h2>Merge/Pull Requests</h2>
                 <p>
                     Squash / Rebase<br/>
-                    <img src="lib/images/nice_git_log.png"/>
+                    <img alt="nice git log" src="lib/images/nice_git_log.png"/>
                 </p>
             </section>
         </section>
@@ -179,7 +179,7 @@
                 <h4>Solution</h4>
                 <p>
                     Forks!!!<br/>
-                    <img data-gif src="https://media.giphy.com/media/5xtDarH5225prbkGJ20/giphy.gif">
+                    <img alt="split" data-gif src="https://media.giphy.com/media/5xtDarH5225prbkGJ20/giphy.gif">
                 </p>
             </section>
             <section>
@@ -197,7 +197,7 @@
         <section>
             <section>
                 <h2>Releases</h2>
-                <img src="https://media.giphy.com/media/NRWFU8lq7hCXS/giphy.gif" data-gif/>
+                <img alt="launch" src="https://media.giphy.com/media/NRWFU8lq7hCXS/giphy.gif" data-gif/>
             </section>
             <section>
                 <h2>Releases</h2>
@@ -252,7 +252,7 @@
                 Thanks :)
             </h1>
             <p>
-                <img src="https://media.giphy.com/media/y8fXirTJjj6E0/giphy.gif" data-gif>
+                <img alt="bow" src="https://media.giphy.com/media/y8fXirTJjj6E0/giphy.gif" data-gif>
             </p>
         </section>
     </div>
