--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <section>
                 <h2>Commits - Semantic</h2>
                 <p>
-                    Use a <a target="_blank" href="https://github.com/commitizen/cz-cli">tool</a> <br/>
+                    Use a <a target="_blank" href="https://github.com/commitizen/cz-cli">Tool</a> <br/>
                     /<br/>
                     Memorize them
                 </p>
