--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section>
             <section>
                 <h1>Welcome</h1>
-                <img alt="hello" data-gif src="https://media.giphy.com/media/eoVusT7Pi9ODe/giphy.gif"/>
+                <img height="350" alt="hello" data-gif src="https://media.giphy.com/media/eoVusT7Pi9ODe/giphy.gif"/>
             </section>
             <section>
                 <h1>Up?</h1>
@@ -52,7 +52,7 @@
                 <h2>Git === Mess
                     <small style='vertical-align: middle;'>(sometimes)</small>
                 </h2>
-                <img alt="messy git" data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
+                <img height="350" alt="messy git" data-gif src="https://media.giphy.com/media/11CoSl1b4qlSH6/giphy.gif"/>
             </section>
             <section>
                 <h2>Git === Mess
@@ -131,7 +131,7 @@
         <section>
             <section>
                 <h2>Merge/Pull Requests</h2>
-                <img alt="mr image" src="https://media.giphy.com/media/cFkiFMDg3iFoI/giphy.gif" data-gif/>
+                <img height="350" alt="mr image" src="https://media.giphy.com/media/cFkiFMDg3iFoI/giphy.gif" data-gif/>
             </section>
             <section>
                 <h2>Merge/Pull Requests</h2>
