--- a/index.html
+++ b/index.html
@@ -187,6 +187,23 @@
                     <img alt="nice git log" src="lib/images/nice_git_log.png"/>
                 </p>
             </section>
+            <section>
+                <h2>Merge/Pull Requests</h2>
+                <p>
+                    Squash / Rebase<br/>
+                <ul>
+                    <li>
+                        Commit by Features
+                    </li>
+                    <li>
+                        Readability
+                    </li>
+                    <li>
+                        Be able to rollback entire features
+                    </li>
+                </ul>
+                </p>
+            </section>
         </section>
         <section>
             <section>
@@ -243,7 +260,8 @@
                 <h2>Releases</h2>
                 <img alt="launch" src="https://media.giphy.com/media/3Cpj1wgUwH5Kw/giphy.gif" data-gif/>
                 <aside class="notes">
-                    Release should be an easy painless process, which should be automated, especially when you want CI/CD.
+                    Release should be an easy painless process, which should be automated, especially when you want
+                    CI/CD.
                     We don't want any complicated method.
                     What's the best method?
                     Well, in my opinion, by using semantic releases it makes it much easier
