--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <div class="slides">
         <section>
             <section>
+                <h1>Git Workflows</h1>
+            </section>
+            <section>
                 <h1>Welcome</h1>
                 <img height="350" alt="hello" data-gif src="https://media.giphy.com/media/eoVusT7Pi9ODe/giphy.gif"/>
                 <aside class="notes">
