--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
             <section>
                 <h2>Merge/Pull Requests</h2>
                 <p>
-                    Squash / Rebase<br/>
+                    Squash<br/>
                     <img alt="nice git log" src="lib/images/nice_git_log.png"/>
                 </p>
             </section>
             <section>
                 <h2>Merge/Pull Requests</h2>
                 <p>
-                    Squash / Rebase<br/>
+                    Squash<br/>
                 <ul>
                     <li>
                         Commit by Features
