--- a/index.html
+++ b/index.html
@@ -316,10 +316,24 @@
             </ul>
         </section>
         <section>
-            <h2>Trunk Based development</h2>
-            <a target="_blank" href="https://trunkbaseddevelopment.com/">
-                Nice Guide
-            </a>
+            <h2>Resources</h2>
+            <ul>
+                <li>
+                    <a target="_blank" href="https://trunkbaseddevelopment.com/">
+                        Trunk Based development
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://github.com/commitizen/cz-cli">
+                        Commitizen
+                    </a>
+                </li>
+                <li>
+                    <a target="_blank" href="https://www.npmjs.com/package/semantic-release-gitlab">
+                        Semantic Release
+                    </a>
+                </li>
+            </ul>
         </section>
         <section>
             <h1>
