--- a/index.html
+++ b/index.html
@@ -54,12 +54,15 @@
             <section>
                 <h2>Git</h2>
                 <ul>
-                    <li>Source Control</li>
-                    <li>CI/CD</li>
-                    <li>Knowledge Sharing</li>
+                    <li>
+                        Source Control
+                    </li>
                 </ul>
                 <aside class="notes">
-                    What do we use git for ... source control, CI/CD, knowledge share
+                    Git is for source control. It's where we manage our code.
+                    Where we decide what's going to production
+                    Where we investigate issues that happen
+                    Where we review each other code
                 </aside>
             </section>
         </section>
