--- a/index.html
+++ b/index.html
@@ -357,7 +357,8 @@
   // - https://github.com/hakimel/reveal.js#configuration
   // - https://github.com/hakimel/reveal.js#dependencies
   Reveal.initialize({
-    fragmentInURL: true,
+    // fragmentInURL: true,
+    history: true,
     // showNotes: true,
     dependencies: [
       { src: 'plugin/markdown/marked.js' },
