--- a/index.html
+++ b/index.html
@@ -260,6 +260,12 @@
                     your copy, the downstream
                 </aside>
             </section>
+            <section>
+                <h2>Forks</h2>
+                <p>
+                    Gitlab has issues with forks and pipelines, see <a href="https://gitlab.com/gitlab-org/gitlab-ce/issues/23902" target="_blank">issue 23902</a>
+                </p>
+            </section>
         </section>
         <section>
             <section>
