--- a/index.html
+++ b/index.html
@@ -210,6 +210,13 @@
                 </ul>
                 </p>
             </section>
+            <section>
+                <h2>Merge/Pull Requests</h2>
+                <p>
+                    Squash<br/>
+                    <img alt="gitlab squash" src="lib/images/gitlab_squash.png"/>
+                </p>
+            </section>
         </section>
         <section>
             <section>
