--- a/index.html
+++ b/index.html
@@ -288,6 +288,21 @@
             </section>
             <section>
                 <h2>Releases</h2>
+                <p>CI / CD world</p>
+                <ul>
+                    <li>Many releases</li>
+                    <li>As little manual intervention</li>
+                </ul>
+                <aside class="notes">
+                    Release should be an easy painless process, which should be automated, especially when you want
+                    CI/CD.
+                    We don't want any complicated method.
+                    What's the best method?
+                    Well, in my opinion, by using semantic releases it makes it much easier
+                </aside>
+            </section>
+            <section>
+                <h2>Releases</h2>
                 <h4>Semantic Release</h4>
                 <ul>
                     <li>Commits of type fix will trigger bugfix releases, think 0.0.1</li>
