--- a/index.html
+++ b/index.html
@@ -65,6 +65,29 @@
                     Where we review each other code
                 </aside>
             </section>
+            <section>
+                <h2>Git</h2>
+                <ul>
+                    <li>
+                        Store our code base
+                    </li>
+                    <li>
+                        Decide on production code
+                    </li>
+                    <li>
+                        Investigate issues
+                    </li>
+                    <li>
+                        Review each other code
+                    </li>
+                </ul>
+                <aside class="notes">
+                    Git is for source control. It's where we manage our code.
+                    Where we decide what's going to production
+                    Where we investigate issues that happen
+                    Where we review each other code
+                </aside>
+            </section>
         </section>
         <section>
             <section>
